--- a/Web.config
+++ b/Web.config
@@ -13,6 +13,16 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+	  <!--//email-->
+	  <add key="FromEmailAddress" value="huyducle1109@gmail.com" />
+	  <add key="FromEmailDisplayName" value="Phản hồi từ khách hàng" />
+	  <add key="FromEmailPassword" value="huyduc123" />
+	  <add key="SMTPHost" value="smtp.gmail.com" />
+	  <add key="SMTPPort" value="587" />
+	  <add key="EnableSSL" value="true" />
+	  <add key="ToEmailAddress" value="huyducle1109@gmail.com" />
+	  
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
