--- a/_ExcellOn_.csproj
+++ b/_ExcellOn_.csproj
@@ -177,8 +177,11 @@
     <Compile Include="Areas\Admin\ViewModel\StaffAssignmentViewModel.cs" />
     <Compile Include="Areas\Admin\ViewModel\StaffViewModel.cs" />
     <Compile Include="Areas\Admin\ViewModel\UserInfoViewModel.cs" />
+    <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\SearchesController.cs" />
+    <Compile Include="Controllers\ServicesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -218,9 +221,11 @@
     <Compile Include="Models\PermissionRole.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ResultTeam.cs" />
     <Compile Include="Models\Role.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\SendMail.cs" />
     <Compile Include="Models\Service.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -2920,6 +2925,29 @@
     <Content Include="Content\Manh\assets\js\jquery.magnific-popup.min.js" />
     <Content Include="Content\Manh\assets\js\owl.carousel.js" />
     <Content Include="Content\Manh\assets\js\theme-change.js" />
+    <Content Include="Content\Manh\assets\templateMail\feedbackmail.html" />
+    <Content Include="Content\Manh\assets\templateMail\Mail.html" />
+    <Content Include="Content\Manh\assets\template\neworder.html" />
+    <Content Include="Content\Manh\searches\css\main.css" />
+    <Content Include="Content\Manh\searches\images\Searchs_002.png" />
+    <Content Include="Content\Manh\searches\images\Service-page-background.jpg" />
+    <Content Include="Content\Manh\searches\js\extention\choices.js" />
+    <Content Include="Content\Manh\searches\js\extention\custom-materialize.js" />
+    <Content Include="Content\Manh\searches\js\extention\flatpickr.js" />
+    <Content Include="Content\Manh\searches\js\main.js" />
+    <Content Include="Content\Manh\team\css\bootstrap.css" />
+    <Content Include="Content\Manh\team\css\pe-icon-7-stroke.css" />
+    <Content Include="Content\Manh\team\css\rotating-card.css" />
+    <Content Include="Content\Manh\team\images\rotating_card_profile.png" />
+    <Content Include="Content\Manh\team\images\rotating_card_profile2.png" />
+    <Content Include="Content\Manh\team\images\rotating_card_profile3.png" />
+    <Content Include="Content\Manh\team\images\rotating_card_thumb.jpg" />
+    <Content Include="Content\Manh\team\images\rotating_card_thumb.png" />
+    <Content Include="Content\Manh\team\images\rotating_card_thumb2.png" />
+    <Content Include="Content\Manh\team\images\rotating_card_thumb3.png" />
+    <Content Include="Content\Manh\team\images\tim_logo.png" />
+    <Content Include="Content\Manh\team\js\bootstrap.min.js" />
+    <Content Include="Content\Manh\team\js\jquery-1.10.2.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -3975,11 +4003,6 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Customer\Login.cshtml" />
     <Content Include="Views\Home\abv.cshtml" />
-    <Content Include="Views\UserInFoes\Create.cshtml" />
-    <Content Include="Views\UserInFoes\Delete.cshtml" />
-    <Content Include="Views\UserInFoes\Details.cshtml" />
-    <Content Include="Views\UserInFoes\Edit.cshtml" />
-    <Content Include="Views\UserInFoes\Index.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Services\company.cshtml" />
     <Content Include="Views\Services\Create.cshtml" />
@@ -3991,6 +4014,12 @@
     <Content Include="Views\Services\feedback.cshtml" />
     <Content Include="Views\Services\Index.cshtml" />
     <Content Include="Views\Services\service.cshtml" />
+    <Content Include="Views\Searches\Index.cshtml" />
+    <Content Include="Views\Contact\Index.cshtml" />
+    <Content Include="Views\Shared\Footer.cshtml" />
+    <Content Include="Views\Shared\Header.cshtml" />
+    <Content Include="Views\Shared\HomePage.cshtml" />
+    <Content Include="Views\Shared\Main.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include=".vs\MVCC\v16\" />
@@ -4000,7 +4029,6 @@
     <Folder Include="Areas\Admin\Views\Base\" />
     <Folder Include="Areas\Admin\Views\Image\" />
     <Folder Include="Views\Base\" />
-    <Folder Include="Views\Shared\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
