Change css for some table

--- a/_ExcellOn_.csproj
+++ b/_ExcellOn_.csproj
@@ -3255,16 +3255,28 @@
     <Content Include="Public\Image\ava.gif" />
     <Content Include="Public\Image\avt.png" />
     <Content Include="Public\Image\Blog-Post-Graphic-How-to-design-the-perfect-MMS_gif.gif" />
+    <Content Include="Public\Image\building.jpg" />
     <Content Include="Public\Image\card-1.jpg" />
     <Content Include="Public\Image\city.jpg" />
+    <Content Include="Public\Image\inbound1.jfif" />
+    <Content Include="Public\Image\inbound2.jfif" />
+    <Content Include="Public\Image\inbound3.jfif" />
+    <Content Include="Public\Image\inbound4.jfif" />
+    <Content Include="Public\Image\inbound5.jfif" />
     <Content Include="Public\Image\logo-small.png" />
     <Content Include="Public\Image\logo_sidenav.png" />
     <Content Include="Public\Image\modern-company-logo-design-vector.jpg" />
     <Content Include="Public\Image\OIP.jfif" />
+    <Content Include="Public\Image\outbound1.jfif" />
+    <Content Include="Public\Image\outbound2.jfif" />
+    <Content Include="Public\Image\outbound3.jfif" />
     <Content Include="Public\Image\porsche-logo-950x1100.png" />
     <Content Include="Public\Image\sidebar-1.jpg" />
     <Content Include="Public\Image\sidebar-2.jpg" />
     <Content Include="Public\Image\sidebar-3.jpg" />
+    <Content Include="Public\Image\tele1.jfif" />
+    <Content Include="Public\Image\tele2.jfif" />
+    <Content Include="Public\Image\tele3.jfif" />
     <Content Include="Public\Image\th %281%29.jfif" />
     <Content Include="Public\Image\th %282%29.jfif" />
     <Content Include="Public\Image\th.jfif" />
