--- a/_ExcellOn_.csproj
+++ b/_ExcellOn_.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Areas\Admin\Model\Permission_Role_Function.cs" />
     <Compile Include="Areas\Admin\Model\HasPermissionAttribute.cs" />
     <Content Include="Areas\Admin\Public\css\onTop.css" />
+    <Content Include="Areas\Admin\Public\css\preloader.css" />
     <Content Include="Areas\Admin\Public\JdLomX\css\avzv.css" />
     <Compile Include="Areas\Admin\ViewModel\AppendedStaff.cs" />
     <Compile Include="Areas\Admin\ViewModel\AssignmentSubmitViewModel.cs" />
@@ -2906,63 +2907,33 @@
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\Duc\ProfileCard.css" />
     <Content Include="Content\Duc\_search.css" />
-    <Content Include="Content\Manh\assets\css\style-starter.css" />
-    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.svg" />
-    <Content Include="Content\Manh\assets\images\4.jpg" />
-    <Content Include="Content\Manh\assets\images\5.jpg" />
-    <Content Include="Content\Manh\assets\images\7.jpg" />
-    <Content Include="Content\Manh\assets\images\8.jpg" />
-    <Content Include="Content\Manh\assets\images\about.jpg" />
-    <Content Include="Content\Manh\assets\images\about2.jpg" />
-    <Content Include="Content\Manh\assets\images\banner1.jpg" />
-    <Content Include="Content\Manh\assets\images\bg1.jpg" />
-    <Content Include="Content\Manh\assets\images\blog1.jpg" />
-    <Content Include="Content\Manh\assets\images\blog2.jpg" />
-    <Content Include="Content\Manh\assets\images\blog3.jpg" />
-    <Content Include="Content\Manh\assets\images\image.jpg" />
-    <Content Include="Content\Manh\assets\images\inner.jpg" />
-    <Content Include="Content\Manh\assets\images\s1.jpg" />
-    <Content Include="Content\Manh\assets\images\s2.jpg" />
-    <Content Include="Content\Manh\assets\images\s3.jpg" />
-    <Content Include="Content\Manh\assets\images\Screenshot %2816%29.png" />
-    <Content Include="Content\Manh\assets\images\Screenshot %284%29.png" />
-    <Content Include="Content\Manh\assets\images\team1.jpg" />
-    <Content Include="Content\Manh\assets\images\team2.jpg" />
-    <Content Include="Content\Manh\assets\images\team3.jpg" />
-    <Content Include="Content\Manh\assets\images\testi1.jpg" />
-    <Content Include="Content\Manh\assets\images\testi2.jpg" />
-    <Content Include="Content\Manh\assets\images\testi3.jpg" />
-    <Content Include="Content\Manh\assets\js\bootstrap.min.js" />
-    <Content Include="Content\Manh\assets\js\counter.js" />
-    <Content Include="Content\Manh\assets\js\jquery-3.3.1.min.js" />
-    <Content Include="Content\Manh\assets\js\jquery.magnific-popup.min.js" />
-    <Content Include="Content\Manh\assets\js\owl.carousel.js" />
-    <Content Include="Content\Manh\assets\js\theme-change.js" />
-    <Content Include="Content\Manh\assets\templateMail\feedbackmail.html" />
-    <Content Include="Content\Manh\assets\templateMail\Mail.html" />
-    <Content Include="Content\Manh\assets\template\neworder.html" />
-    <Content Include="Content\Manh\searches\css\main.css" />
-    <Content Include="Content\Manh\searches\images\Searchs_002.png" />
-    <Content Include="Content\Manh\searches\images\Service-page-background.jpg" />
-    <Content Include="Content\Manh\searches\js\extention\choices.js" />
-    <Content Include="Content\Manh\searches\js\extention\custom-materialize.js" />
-    <Content Include="Content\Manh\searches\js\extention\flatpickr.js" />
-    <Content Include="Content\Manh\searches\js\main.js" />
-    <Content Include="Content\Manh\searchresult.css" />
-    <Content Include="Content\Manh\team\css\bootstrap.css" />
-    <Content Include="Content\Manh\team\css\pe-icon-7-stroke.css" />
-    <Content Include="Content\Manh\team\css\rotating-card.css" />
-    <Content Include="Content\Manh\team\images\rotating_card_profile.png" />
-    <Content Include="Content\Manh\team\images\rotating_card_profile2.png" />
-    <Content Include="Content\Manh\team\images\rotating_card_profile3.png" />
-    <Content Include="Content\Manh\team\images\rotating_card_thumb.jpg" />
-    <Content Include="Content\Manh\team\images\rotating_card_thumb.png" />
-    <Content Include="Content\Manh\team\images\rotating_card_thumb2.png" />
-    <Content Include="Content\Manh\team\images\rotating_card_thumb3.png" />
-    <Content Include="Content\Manh\team\images\tim_logo.png" />
-    <Content Include="Content\Manh\team\js\bootstrap.min.js" />
-    <Content Include="Content\Manh\team\js\jquery-1.10.2.js" />
     <Content Include="Content\Son\assets\css\searchresult.css" />
+    <Content Include="Content\Template\assets\css\style-starter.css" />
+    <Content Include="Content\Template\assets\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\Template\assets\images\about.jpg" />
+    <Content Include="Content\Template\assets\images\about2.jpg" />
+    <Content Include="Content\Template\assets\images\banner1.jpg" />
+    <Content Include="Content\Template\assets\images\bg1.jpg" />
+    <Content Include="Content\Template\assets\images\blog1.jpg" />
+    <Content Include="Content\Template\assets\images\blog2.jpg" />
+    <Content Include="Content\Template\assets\images\blog3.jpg" />
+    <Content Include="Content\Template\assets\images\image.jpg" />
+    <Content Include="Content\Template\assets\images\inner.jpg" />
+    <Content Include="Content\Template\assets\images\s1.jpg" />
+    <Content Include="Content\Template\assets\images\s2.jpg" />
+    <Content Include="Content\Template\assets\images\s3.jpg" />
+    <Content Include="Content\Template\assets\images\team1.jpg" />
+    <Content Include="Content\Template\assets\images\team2.jpg" />
+    <Content Include="Content\Template\assets\images\team3.jpg" />
+    <Content Include="Content\Template\assets\images\testi1.jpg" />
+    <Content Include="Content\Template\assets\images\testi2.jpg" />
+    <Content Include="Content\Template\assets\images\testi3.jpg" />
+    <Content Include="Content\Template\assets\js\bootstrap.min.js" />
+    <Content Include="Content\Template\assets\js\counter.js" />
+    <Content Include="Content\Template\assets\js\jquery-3.3.1.min.js" />
+    <Content Include="Content\Template\assets\js\jquery.magnific-popup.min.js" />
+    <Content Include="Content\Template\assets\js\owl.carousel.js" />
+    <Content Include="Content\Template\assets\js\theme-change.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -3058,11 +3029,6 @@
     <Content Include="packages\EntityFramework.6.1.3\tools\EntityFramework.PowerShell.dll" />
     <Content Include="packages\EntityFramework.6.1.3\tools\EntityFramework.PowerShell.Utility.dll" />
     <Content Include="packages\EntityFramework.6.1.3\tools\migrate.exe" />
-    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.eot" />
-    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.ttf" />
-    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.woff" />
-    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.woff2" />
-    <Content Include="Content\Manh\assets\fonts\FontAwesome.otf" />
     <Content Include="Areas\Admin\Views\ServiceManagement\ServiceIndex.cshtml" />
     <Content Include="Areas\Admin\Views\ServiceManagement\Add.cshtml" />
     <Content Include="Areas\Admin\Views\ServiceManagement\Edit.cshtml" />
@@ -3093,6 +3059,11 @@
     <Content Include="Areas\Admin\Views\StaffManagement\StaffFreeIndex.cshtml" />
     <Content Include="Areas\Admin\Views\CustomerManagement\CustomerInOrderIndex.cshtml" />
     <Content Include="Areas\Admin\Views\StaffManagement\StaffInWorkingIndex.cshtml" />
+    <Content Include="Content\Template\assets\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\Template\assets\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\Template\assets\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\Template\assets\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\Template\assets\fonts\FontAwesome.otf" />
     <None Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1-vsdoc.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.min.js" />
@@ -4036,7 +4007,6 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Customer\Login.cshtml" />
     <Content Include="Views\Home\abv.cshtml" />
-    <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Services\company.cshtml" />
     <Content Include="Views\Services\Create.cshtml" />
     <Content Include="Views\Services\Delete.cshtml" />
@@ -4049,10 +4019,6 @@
     <Content Include="Views\Services\service.cshtml" />
     <Content Include="Views\Searches\Index.cshtml" />
     <Content Include="Views\Contact\Index.cshtml" />
-    <Content Include="Views\Shared\Footer.cshtml" />
-    <Content Include="Views\Shared\Header.cshtml" />
-    <Content Include="Views\Shared\HomePage.cshtml" />
-    <Content Include="Views\Shared\Main.cshtml" />
     <Content Include="Views\About\HomeAbout.cshtml" />
     <Content Include="Views\About\Index.cshtml" />
     <Content Include="Views\Home\InfoNumber.cshtml" />
@@ -4064,6 +4030,9 @@
     <Content Include="Views\Services\detailteam1.cshtml" />
     <Content Include="Views\Services\registerservice.cshtml" />
     <Content Include="Views\Customer2\OrderIndex.cshtml" />
+    <Content Include="Views\Shared\_MainLayout.cshtml" />
+    <Content Include="Views\Shared\_HeaderLayout.cshtml" />
+    <Content Include="Views\Shared\_FooterLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include=".vs\MVCC\v16\" />
