--- a/_ExcellOn_.csproj
+++ b/_ExcellOn_.csproj
@@ -2911,21 +2911,44 @@
     <Content Include="Content\Duc\StaffProfile1.css" />
     <Content Include="Content\Duc\StaffProfile2.css" />
     <Content Include="Content\Duc\_search.css" />
-    <Content Include="Content\Manh\assets\css\fontawesome.css" />
-    <Content Include="Content\Manh\assets\css\owl.css" />
-    <Content Include="Content\Manh\assets\css\style.css" />
-    <Content Include="Content\Manh\assets\js\custom.js" />
-    <Content Include="Content\Manh\assets\js\owl.js" />
-    <Content Include="Content\Manh\vendor\bootstrap\css\bootstrap.css" />
-    <Content Include="Content\Manh\vendor\bootstrap\css\bootstrap.min.css" />
-    <Content Include="Content\Manh\vendor\bootstrap\js\bootstrap.bundle.js" />
-    <Content Include="Content\Manh\vendor\bootstrap\js\bootstrap.bundle.min.js" />
-    <Content Include="Content\Manh\vendor\bootstrap\js\bootstrap.js" />
-    <Content Include="Content\Manh\vendor\bootstrap\js\bootstrap.min.js" />
-    <Content Include="Content\Manh\vendor\jquery\jquery.js" />
-    <Content Include="Content\Manh\vendor\jquery\jquery.min.js" />
-    <Content Include="Content\Manh\vendor\jquery\jquery.slim.js" />
-    <Content Include="Content\Manh\vendor\jquery\jquery.slim.min.js" />
+    <Content Include="Content\Manh\assets\css\style-starter.css" />
+    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\Manh\assets\images\4.jpg" />
+    <Content Include="Content\Manh\assets\images\5.jpg" />
+    <Content Include="Content\Manh\assets\images\7.jpg" />
+    <Content Include="Content\Manh\assets\images\8.jpg" />
+    <Content Include="Content\Manh\assets\images\95-telemarketing.jpg" />
+    <Content Include="Content\Manh\assets\images\about.jpg" />
+    <Content Include="Content\Manh\assets\images\about2.jpg" />
+    <Content Include="Content\Manh\assets\images\banner1.jpg" />
+    <Content Include="Content\Manh\assets\images\bg1.jpg" />
+    <Content Include="Content\Manh\assets\images\blog1.jpg" />
+    <Content Include="Content\Manh\assets\images\blog2.jpg" />
+    <Content Include="Content\Manh\assets\images\blog3.jpg" />
+    <Content Include="Content\Manh\assets\images\Business-Growth.png" />
+    <Content Include="Content\Manh\assets\images\image.jpg" />
+    <Content Include="Content\Manh\assets\images\inner.jpg" />
+    <Content Include="Content\Manh\assets\images\s1.jpg" />
+    <Content Include="Content\Manh\assets\images\s2.jpg" />
+    <Content Include="Content\Manh\assets\images\s3.jpg" />
+    <Content Include="Content\Manh\assets\images\Screenshot %2816%29.png" />
+    <Content Include="Content\Manh\assets\images\Screenshot %284%29.png" />
+    <Content Include="Content\Manh\assets\images\team1.jpg" />
+    <Content Include="Content\Manh\assets\images\team2.jpg" />
+    <Content Include="Content\Manh\assets\images\team3.jpg" />
+    <Content Include="Content\Manh\assets\images\testi1.jpg" />
+    <Content Include="Content\Manh\assets\images\testi2.jpg" />
+    <Content Include="Content\Manh\assets\images\testi3.jpg" />
+    <Content Include="Content\Manh\assets\images\th %281%29.jfif" />
+    <Content Include="Content\Manh\assets\js\bootstrap.min.js" />
+    <Content Include="Content\Manh\assets\js\counter.js" />
+    <Content Include="Content\Manh\assets\js\jquery-3.3.1.min.js" />
+    <Content Include="Content\Manh\assets\js\jquery.magnific-popup.min.js" />
+    <Content Include="Content\Manh\assets\js\owl.carousel.js" />
+    <Content Include="Content\Manh\assets\js\theme-change.js" />
+    <Content Include="Content\Manh\assets\templateMail\feedbackmail.html" />
+    <Content Include="Content\Manh\assets\templateMail\Mail.html" />
+    <Content Include="Content\Manh\assets\template\neworder.html" />
     <Content Include="Content\Son\assets\css\searchresult.css" />
     <Content Include="Content\Template\assets\css\style-starter.css" />
     <Content Include="Content\Template\assets\fonts\fontawesome-webfont.svg" />
@@ -3083,14 +3106,11 @@
     <Content Include="Content\Template\assets\fonts\fontawesome-webfont.woff" />
     <Content Include="Content\Template\assets\fonts\fontawesome-webfont.woff2" />
     <Content Include="Content\Template\assets\fonts\FontAwesome.otf" />
-    <Content Include="Content\Manh\vendor\bootstrap\css\bootstrap.css.map" />
-    <Content Include="Content\Manh\vendor\bootstrap\css\bootstrap.min.css.map" />
-    <Content Include="Content\Manh\vendor\bootstrap\js\bootstrap.bundle.js.map" />
-    <Content Include="Content\Manh\vendor\bootstrap\js\bootstrap.bundle.min.js.map" />
-    <Content Include="Content\Manh\vendor\bootstrap\js\bootstrap.js.map" />
-    <Content Include="Content\Manh\vendor\bootstrap\js\bootstrap.min.js.map" />
-    <Content Include="Content\Manh\vendor\jquery\jquery.min.map" />
-    <Content Include="Content\Manh\vendor\jquery\jquery.slim.min.map" />
+    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\Manh\assets\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\Manh\assets\fonts\FontAwesome.otf" />
     <None Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1-vsdoc.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.js" />
     <Content Include="packages\jQuery.3.4.1\Content\Scripts\jquery-3.4.1.min.js" />
