--- a/Web.config
+++ b/Web.config
@@ -67,7 +67,13 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-BFLA7U8\SQLEXPRESS;initial catalog=Excell-On;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" 
+		 connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;
+		 data source=DESKTOP-BFLA7U8\SQLEXPRESS;
+		 initial catalog=Excell-On;
+		 integrated security=True;
+		 MultipleActiveResultSets=True;
+		 App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
